--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -38,7 +38,7 @@
   width: 100%;
   background-color: #EDEDED;
   padding: 0;
-  margin-top: 8px;
+  margin-top: 15px;
   font-size: 14px;
   font-weight: 300;
 }
@@ -52,6 +52,10 @@
 .new-login-register-btn {
   height: 70px;
   background-color: white;
-  border: 2px solid black;
+  border: 1px solid black;
   font-size: large;
+  display: flex;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
 }
