--- a/src/pages/Collection/Collection.css
+++ b/src/pages/Collection/Collection.css
@@ -2,7 +2,7 @@
     background-color: #f5f5f5;
     display: flex;
     width: 100%;
-    height: 400px;
+    height: 300px;
     align-items: center;
 }
 .collection-name{
@@ -78,4 +78,23 @@
 }
 .collection-item-thumbnail:hover .collection-item-thumbnail-img-active{
     display: block;
+}
+
+
+@media (min-width: 1366px) and (max-width: 1600px){
+    .new-container{
+        width: 80%;
+    }
+}
+
+@media (min-width: 1200px) and (max-width: 1366px){
+    .new-container{
+        width: 90%;
+    }
+}
+
+@media (max-width: 1366px) {
+    .new-collection-content-item{
+        width: 100%;
+    }
 }
